# asteroidz-scenefx

./: .gitignore  PKGBUILD  README.md  meson.build
.github/: FUNDING.yml
.github/workflows/: aur-publish.yml  build-deb.yml
docs/: vulkan-port.md
include/render/: pass.h  vulkan.h
include/render/fx_renderer/: fx_renderer.h  shaders.h
include/scenefx/render/: pass.h
include/scenefx/types/: wlr_scene.h
packaging/deb/: build.sh
render/fx_renderer/: fx_framebuffer.c  fx_offscreen_buffers.c  fx_pass.c  fx_renderer.c  fx_texture.c  shaders.c
render/fx_renderer/shaders/: blur2.frag  blur_effects.frag  color_transform.frag  corner_alpha.frag  meson.build  tex.frag
render/fx_renderer/vulkan/: pass.c  renderer.c  texture.c  vulkan.c
render/fx_renderer/vulkan/shaders/: blur1.comp  blur1.frag  blur2.comp  blur2.frag  blur_effects.frag  box_shadow.frag  common.vert  meson.build  output.frag  quad_grad_round.frag  quad_round.frag  texture.frag  texture_mask_round.frag  texture_round.frag
types/: meson.build
types/scene/: subsurface_tree.c  surface.c  wlr_scene.c  xdg_shell.c
